--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body id="wasm-example">
   <script type="module">
       import init from "./pkg/sdf_experiment.js";
+      console.log("imported init");
       init().then(() => {
           console.log("WASM Loaded");
       });
